--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "@pureadmin/tools",
   "version": "0.0.1",
-  "description": "工具",
-  "main": "src/index.js",
+  "description": "tools",
+  "main": "dist/tools.umd.js",
+  "module": "dist/tools.esm.js",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Hyk260/pureadmin-tools.git"
+  },
   "keywords": [
     "@pureadmin/tools",
     "es6"
@@ -17,6 +26,23 @@
   "author": "ljxhyk",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.22.8",
+    "@babel/preset-env": "^7.22.7",
+    "@rollup/plugin-alias": "^3.1.2",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-eslint": "^8.0.1",
+    "@rollup/plugin-html": "^0.2.2",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-replace": "^2.4.1",
+    "babel-jest": "^29.6.1",
+    "eslint": "^7.19.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "jest": "^29.6.1",
+    "lodash-es": "^4.17.21",
     "rollup": "^2.38.5",
     "rollup-jest": "^1.1.1",
     "rollup-plugin-analyzer": "^4.0.0",
@@ -25,24 +51,13 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "@rollup/plugin-alias": "^3.1.2",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-eslint": "^8.0.1",
-    "@rollup/plugin-html": "^0.2.2",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-replace": "^2.4.1",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "@babel/core": "^7.22.8",
-    "@babel/preset-env": "^7.22.7",
-    "babel-jest": "^29.6.1",
-    "eslint": "^7.19.0",
-    "jest": "^29.6.1",
-    "lodash-es": "^4.17.21",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
+  },
+  "jest": {
+    "preset": "rollup-jest"
+  },
+  "dependencies": {
+    "typescript": "^5.1.6"
   }
 }
