--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pure-tools",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "tools",
-  "main": "dist/tools.umd.js",
+  "main": "dist/tools.umd.min.js",
   "module": "dist/tools.esm.js",
   "publishConfig": {
     "access": "public",
@@ -17,9 +17,9 @@
     "es6"
   ],
   "scripts": {
-    "dev": "rollup -w --environment NODE_ENV:development -c scripts/rollup.config.dev.js",
-    "build": "rollup --environment NODE_ENV:development -c scripts/rollup.config.prod.js",
-    "build:webpack": "webpack",
+    "build:rollup:dev": "rollup -w --environment NODE_ENV:development -c scripts/rollup.config.dev.js",
+    "build:rollup": "rollup --environment NODE_ENV:development -c scripts/rollup.config.prod.js",
+    "build:webpack": "webpack --config scripts/webpack.config.js",
     "test": "jest",
     "lint": "eslint --fix src"
   },
@@ -35,14 +35,16 @@
     "@rollup/plugin-html": "^0.2.2",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.1",
-    "babel-jest": "^29.6.1",
     "eslint": "^7.19.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "jest": "^29.6.1",
+    "ts-jest": "^29.1.1",
+    "babel-jest": "^29.6.1",
     "lodash-es": "^4.17.21",
+    "prettier": "^3.0.3",
     "rollup": "^2.38.5",
     "rollup-jest": "^1.1.1",
     "rollup-plugin-analyzer": "^4.0.0",
@@ -51,8 +53,11 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "typescript": "^5.2.2",
     "webpack": "^5.88.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "tslib": "^2.6.2"
   },
   "jest": {
     "preset": "rollup-jest"
