--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pure-tools",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "tools",
   "main": "dist/tools.umd.min.js",
   "module": "dist/tools.esm.js",
@@ -35,14 +35,13 @@
     "@rollup/plugin-html": "^0.2.2",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.1",
+    "babel-jest": "^29.6.1",
     "eslint": "^7.19.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "jest": "^29.6.1",
-    "ts-jest": "^29.1.1",
-    "babel-jest": "^29.6.1",
     "lodash-es": "^4.17.21",
     "prettier": "^3.0.3",
     "rollup": "^2.38.5",
@@ -54,10 +53,13 @@
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
+    "ts-jest": "^29.1.1",
+    "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
-    "tslib": "^2.6.2"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3"
   },
   "jest": {
     "preset": "rollup-jest"
