--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,6 @@
     "target": "ESNext",
     "module": "ESNext"
   },
-  "exclude": ["node_modules", "test"],
+  "exclude": ["node_modules", "dist"],
   "include": ["src/**/*"]
 }
